updated with working links

--- a/src/add.html
+++ b/src/add.html
@@ -20,7 +20,11 @@
                     <h5 class="card-header">Tracee Brown<br /><br />Manager</h5>
                     <ul class="list-group list-group-flush bg-light">
                         <li class="list-group-item">ID: 5498543</li>
-                        <li class="list-group-item">Email Address: tracee@yahoo.com</li>
+                        <li class="list-group-item">Email Address: tracee@yahoo.com
+                            <a href="mailto: tracee@yahoo.com">
+                                Send email
+                            </a>
+                        </li>
                         <li class="list-group-item">Office Phone: 505-368-6504</li>
                     </ul>
                 </div>
@@ -30,7 +34,11 @@
                     <h5 class="card-header">Jordan Brown<br /><br />Engineer</h5>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">ID: 51321</li>
-                        <li class="list-group-item">Email Address: jbrown@gmail.com</li>
+                        <li class="list-group-item">Email Address: tracee@yahoo.com
+                            <a href="mailto: tracee@yahoo.com">
+                                Send email
+                            </a>
+                        </li>
                         <li class="list-group-item">GitHub: SomethingCool</li>
                     </ul>
                 </div>
@@ -40,7 +48,11 @@
                     <h5 class="card-header">Jayden Brown<br /><br />Intern</h5>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">ID: 465456</li>
-                        <li class="list-group-item">Email Address: Jayden@aol.com</li>
+                        <li class="list-group-item">Email Address: tracee@yahoo.com
+                            <a href="mailto: tracee@yahoo.com">
+                                Send email
+                            </a>
+                        </li>
                         <li class="list-group-item">School: University of Utah</li>
                     </ul>
                 </div>
@@ -50,7 +62,11 @@
                     <h5 class="card-header">Ruby Brown<br /><br />Employee</h5>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">ID: 123456</li>
-                        <li class="list-group-item">Email Address: rrr@hotmail.com</li>
+                        <li class="list-group-item">Email Address: tracee@yahoo.com
+                            <a href="mailto: tracee@yahoo.com">
+                                Send email
+                            </a>
+                        </li>
                         <li class="list-group-item">School: FLC</li>
                     </ul>
                 </div>
